-*- outline -*-

This file documents user visible changes between versions of StumpWM

* Changes since 0.0.6
These changes are probably incomplete

** stumpwm now handles window roles

** move-focus now uses a heuristic to find the 'best' frame to focus

** format-time-string
Now takes an optional format string as an argument!

** more netwm compliance
stumpwm now exports its groups as netwm desktops.

** new var *default-package*
This decides what package the eval command reads and executes things
in.

** new var *new-window-prefered-frame*
It controls what frame a new window appears in.

** "help" command prints bindings in columns
And it doesn't timeout.

** new variable *suppress-abort-messages*
Suppress abort message when non-nil.

** configure script
Now you can use it to select a lisp and point the makefile to the
location of your lisp.

** new command gmerge

** startup message configurable
with *startup-message*.

** format string arguments can be cropped
In the windows command, %20t will crop the window's title to 20
characters. This numeric prefix works for all % arguments.

** _NET_CLIENT_LIST works
which means wmctl -l returns useful info.

** stumpwm executables
the Makefile can now generate executables for sbcl and clisp. Edit the
Makefile to choose you lisp.

** New global *new-frame-action*

** New commands describe-key, describe-variable, describe-function, where-is

** New prefix map *help-map*

** New command, title, bound to C-t A
title sets the window's name.

** errors while reloading stumpwm 
A restarts menu now appears that allows you to select a restart, if
you want.

** new function restarts-menu

** modeline update timer
set to 60s by default.

** timers
see run-with-timer and cancel-timer

** improved frame splitting, resizing and removing

** *run-or-raise-all-groups* variable

* Changes since 0.0.5
** quit command

* Changes since 0.0.3

** Frame support
StumpWM now sports basic frame support. No resizing yet.

* Changes since 0.0.2
