@@ -5,6 +5,8 @@ This file documents user visible changes between versions of StumpWM
 * Changes since 0.0.6
 These changes are probably incomplete
 
+** added rule based window placement
+
 ** stumpwm now handles window roles
 
 ** move-focus now uses a heuristic to find the 'best' frame to focus
